deployment/envoy-configmap.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-conf
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: listener1
          address:
            socket_address: { address: 0.0.0.0, port_value: 5000 }
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: grpc_json
                    codec_type: AUTO
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: local_service
                          domains: ["*"]
                          routes:
                            - match: { prefix: "/tracking.DeliveryTracker" }
                              route: { cluster: grpc, timeout: 60s }
                    http_filters:
                      - name: envoy.filters.http.grpc_json_transcoder
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                          proto_descriptor: "/tmp/envoy/proto.pb"
                          services: ["tracking.DeliveryTracker"]
                          print_options:
                            add_whitespace: true
                            always_print_primitive_fields: true
                            always_print_enums_as_ints: false
                            preserve_proto_field_names: false
                      - name: envoy.filters.http.router
      clusters:
        - name: grpc
          connect_timeout: 0.5s
          type: LOGICAL_DNS
          dns_lookup_family: V4_ONLY
          lb_policy: ROUND_ROBIN
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
          load_assignment:
            cluster_name: grpc
            endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: tracker-service.order-tracker.svc.cluster.local
                        port_value: 50051
          health_checks:
            timeout: 1s
            interval: 10s
            unhealthy_threshold: 2
            healthy_threshold: 2
            grpc_health_check: {}
          health_checks:
            timeout: 1s
            interval: 5s
            unhealthy_threshold: 2
            healthy_threshold: 2
            grpc_health_check: {}
