deployment/envoy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.18.2
          ports:
            - name: https
              containerPort: 443
          volumeMounts:
            - name: config
              mountPath: /etc/envoy
            - name: certs
              mountPath: /etc/ssl/envoy
            - name: proto-descriptor
              mountPath: /tmp/envoy/proto.pb
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /healthz
              httpHeaders:
                - name: x-envoy-livenessprobe
                  value: healthz
              port: 443
            initialDelaySeconds: 3
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /healthz
              httpHeaders:
                - name: x-envoy-livenessprobe
                  value: healthz
              port: 443
            initialDelaySeconds: 10
      volumes:
        - name: config
          configMap:
            name: envoy-conf
        - name: certs
          secret:
            secretName: envoy-certs
        - name: proto-descriptor
          configMap:
            name: proto-descriptor
